compiler/tests/success/common/bug_499.jazz
fn aux(reg ptr u32[2] out in) -> reg ptr u32[2] {
  reg u32[2] x y;
  x = #copy_32(in);
  y[0], y[1] = x[0] * 32u x[1];
  out = #copy_32(y);
  return out;
}

export fn test(reg u32 t) -> reg u32 {
  stack u32[2] a b;
  inline int i;
  for i = 0 to 2 { a[i] = t; }
  b = aux(b, a);
  reg u32 res;
  res = 0;
  for i = 0 to 2 { t = b[i]; res |= t; }
  return res;
}
